add popup and statistic of game

--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
       <button class="btn">Option 3</button>
       <button class="btn">Option 4</button>
     </div>
+    <button data-modal class="btn stats">Подивитися статистику</button>
+    <div class="modal">
+      <div class="modal__dialog">
+        <div class="modal__content">
+          <div data-close class="modal__close">&times;</div>
+          <div class="modal__title">Результат гри</div>
+          <p>Ваші предмети та навички:</p>
+          <ul class="items"></ul>
+          <div class="death"></div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 
